# pyqt5-embed-paraview

./: Branch.n010.mha  CMakeLists.txt  README.md  build.sh  demo.py  foo.cpp  foo.h  foo.pro  foo.sip  main.cpp  run.sh
pvpy/: Makefile  pvpy.sip
pvwidget/: CMakeLists.txt  main.cpp  mywindow.ui  pvwidget.cpp  pvwidget.h  pvwidget.ui
